--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,12 +5,14 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="9"
         android:targetSdkVersion="17" />
     
     <uses-feature 
         android:glEsVersion="0x00020000" 
         android:required="true" />
+    
+    <uses-permission android:name="com.android.vending.CHECK_LICENSE" />
 
     <application
         android:allowBackup="true"
