--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,11 +7,11 @@
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="17" />
-    
-    <uses-feature 
-        android:glEsVersion="0x00020000" 
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
         android:required="true" />
-    
+
     <uses-permission android:name="com.android.vending.CHECK_LICENSE" />
 
     <application
@@ -20,17 +20,29 @@
         android:label="@string/app_name"
         android:theme="@style/ExampleTheme" >
         <activity
-            android:name="android.app.NativeActivity"
-            android:screenOrientation="landscape"
-            android:label="@string/app_name">
-            <meta-data android:name="android.app.lib_name"
-                    android:value="ndk1" />
+            android:name="com.pathogengame.pathogen.Main2Activity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="ndk1" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> 
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.pathogengame.pathogen.VideoActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
             
+             <intent-filter>
+                 <action android:name="android.intent.action.MAIN" />
+                 <category android:name="android.intent.category.DEFAULT" />
+             </intent-filter>
         </activity>
     </application>
-    
+
 </manifest>
